modified exporter class; focus to fill context now on template
refs #370

Change-Id: I087377a548505ba5538d2c34730abe6a4926450d

--- a/io/plugins/eu.esdihumboldt.hale.io.html/src/eu/esdihumboldt/hale/io/html/style.css
+++ b/io/plugins/eu.esdihumboldt.hale.io.html/src/eu/esdihumboldt/hale/io/html/style.css
@@ -58,9 +58,11 @@ h3
 
 h4
 {
-	text-indent:20px;
-	margin-left:5px;
 	font-size: 1.2em;
+}
+h5{
+	font-size: 1.0em;
+	text-decoration: underline;
 }
 
 p
