removed lists (ul/li) from alignment html export template
refs #370

Change-Id: I04567b89d844e6ebbc08da126be0b8903b224299
Reviewed-on: http://gerrit.esdi-community.eu/763
Tested-by: Jenkins <sitemple@igd.fraunhofer.de>
Reviewed-by: Simon Templer <simon.templer@igd.fraunhofer.de>

--- a/io/plugins/eu.esdihumboldt.hale.io.html/src/eu/esdihumboldt/hale/io/html/style.css
+++ b/io/plugins/eu.esdihumboldt.hale.io.html/src/eu/esdihumboldt/hale/io/html/style.css
@@ -8,6 +8,10 @@ body
 	margin: 12px;
 }
 
+.cell {
+	padding: 10px;
+}
+
 /** link defintions **/
 
 a:link, a:visited
@@ -43,9 +47,9 @@ h1
 
 h2
 {
-	background: url(int_link.png) no-repeat 1px 1px;
+	background: url(int_link.png) no-repeat left center;
 	text-indent:20px;
-	margin-left:20px;
+	margin-left:10px;
 	font-size: 1.7em;
 	border-bottom: 1px solid;
 }
