support cell explanation in alignment html export
refs #370
refs #374

Change-Id: I88bd2398c9adf3fdaca5728e8220c01abd060c9c
Reviewed-on: http://gerrit.esdi-community.eu/769
Tested-by: Jenkins <sitemple@igd.fraunhofer.de>
Reviewed-by: Simon Templer <simon.templer@igd.fraunhofer.de>

--- a/io/plugins/eu.esdihumboldt.hale.io.html/src/eu/esdihumboldt/hale/io/html/style.css
+++ b/io/plugins/eu.esdihumboldt.hale.io.html/src/eu/esdihumboldt/hale/io/html/style.css
@@ -18,6 +18,12 @@ body
 	border: 1px solid #eee;
 }
 
+.explanation {
+	white-space: pre-wrap;
+	margin-left: 0px;
+	max-width: 580px;
+}
+
 /** link defintions **/
 
 a:link, a:visited
