modified the template and style.css for the mapping exporter
refs #370

Change-Id: Iad01892d859c5fee75429df9c21279483077d42e

--- a/io/plugins/eu.esdihumboldt.hale.io.html/src/eu/esdihumboldt/hale/io/html/style.css
+++ b/io/plugins/eu.esdihumboldt.hale.io.html/src/eu/esdihumboldt/hale/io/html/style.css
@@ -123,13 +123,14 @@ li
 /** table defintions **/
 
 table { 
+	padding: 3px;
 	border-spacing: 0;
 	border-collapse: collapse;
 }
 
-td,th { vertical-align: top; }
+td,th { }
 
-th { font-weight: 200; text-align: left;}
+th { font-weight: bold; text-align: right;}
 td.leftcol,
 th.leftcol { padding-right: 10px; }
 td.rightcol,
