some details about properties view for schema explorer doc
refs #385

Change-Id: I80b69b139488d8d909f0729abd2af67ff8380482

--- a/doc/plugins/eu.esdihumboldt.hale.doc.user/html/views/schema_explorer.html
+++ b/doc/plugins/eu.esdihumboldt.hale.doc.user/html/views/schema_explorer.html
@@ -28,7 +28,18 @@
 		type have a structure according to that type's definition, they may
 		have a value and properties of themselves. Select a schema element and
 		open the <i>Properties</i> view to display detailed information about
-		it.
+		it. For XML schemas this may include a description of the schema
+		element, as provided as documentation in the schema.
+	</p>
+	<div>
+		<img src="images/schema_properties.png"
+			title="Schema element information in Properties view">
+	</div>
+	<p class="Note">
+		Please note that the <strong>Properties</strong> view is a view for
+		displaying information on any kind of selected object and doesn't
+		refer to the term <strong>property</strong> as used in the context of
+		schemas.
 	</p>
 	<p>
 		In the <i>Schema Explorer</i>, additionally to the element name, the
