--- a/doc/plugins/eu.esdihumboldt.hale.doc.user/html/views/transformed_data.html
+++ b/doc/plugins/eu.esdihumboldt.hale.doc.user/html/views/transformed_data.html
@@ -2,13 +2,10 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-<title>Transformed Data</title>
+<title>Transformed Data view</title>
 </head>
 <body>
-
-<h2>Transformed Data</h2>
-
-Enter explanation here!
-
+	<h1>Transformed Data view</h1>
+	<p>TODO</p>
 </body>
 </html>
