added documentation on alignment view
refs #385

Change-Id: I005e198487947fbcf2c929e067856fded7bd8b1e

--- a/doc/plugins/eu.esdihumboldt.hale.doc.user/html/views/alignment.html
+++ b/doc/plugins/eu.esdihumboldt.hale.doc.user/html/views/alignment.html
@@ -6,5 +6,39 @@
 </head>
 <body>
 	<h1>Alignment view</h1>
+	<p>
+		The <i>Alignment view</i> displays the current alignment in a graph
+		representation. At the top of the view is a combo box, where your can
+		select a defined type relation. The mapping cells displayed are those
+		that are associated with the selected relation. This is always the
+		corresponding cell, defining the type relation, but also the mappings
+		on properties that are applicable in the context of the mapped types.
+		The image below shows the mapping of the example project provided in
+		the <a class="command-link"
+			href='javascript:executeCommand("org.eclipse.ui.cheatsheets.openCheatSheet(cheatSheetId=eu.esdihumboldt.hale.ui.firststeps.firststepsCS)")'>
+			<img src="PLUGINS_ROOT/org.eclipse.help/command_link.png"
+			alt="command link">Get started with HALE</a> guide.
+	</p>
+	<div>
+		<img src="images/alignment_view.png" title="Alignment view">
+	</div>
+	<p>
+		You can select a schema element or <i>cell</i> by clicking on the
+		respective graph node. The selected node is highlighted with a yellow
+		background. The image below shows the explanation of a selected <i>cell</i>
+		in the <a href="../properties.html">Properties view</a>.
+	</p>
+	<div>
+		<img src="images/alignment_properties.png" title="Cell properties">
+	</div>
+	<p>
+		The <i>Alignment view</i> also offers the possibility to manipulate
+		the mapping. A selected cell may be edited or removed, using either
+		the context menu or the <i>Edit</i> menu in the main menu bar.
+	</p>
+	<div>
+		<img src="images/alignment_actions.png" title="Cell context menu">
+	</div>
+	<!-- related tasks: create relation, edit relation, remove relation -->
 </body>
 </html>
