added documentation on Error Log
refs #385

Change-Id: I82a152b55ebfc1b711af6e73243fcb3be93c1d06

--- a/doc/plugins/eu.esdihumboldt.hale.doc.user/html/views/error_log.html
+++ b/doc/plugins/eu.esdihumboldt.hale.doc.user/html/views/error_log.html
@@ -6,5 +6,23 @@
 </head>
 <body>
 	<h1>Error Log</h1>
+	<p>
+		The <i>Error Log</i> gives you insight into the application's log
+		messages. This can be very helpful in case the application behaves in
+		a strange way or if you need more details on an error. For certain
+		actions the messages are grouped to allow a fast assessment if any
+		warnings<img src="../../images/warning.gif"> or errors<img
+			src="../../images/error.gif"> occurred related to that action.
+	</p>
+	<div>
+		<img src="images/error_log.png" title="Error Log">
+	</div>
+	<p>You can use the view menu accessible through the small triangle
+		in the top right corner of the view to configure the log, e.g. to
+		display only the messages from the most recent session.</p>
+	<p class="Note">
+		<strong>Tip: </strong>The log can be exported to a file to submit with
+		a bug report.
+	</p>
 </body>
 </html>
