added functions concept and view documentation
refs #385

Change-Id: I603f4c7035125b21f3021e3f48868b26b49f1438
Reviewed-on: http://gerrit.esdi-community.eu/966
Tested-by: Jenkins <sitemple@igd.fraunhofer.de>
Reviewed-by: Simon Templer <simon.templer@igd.fraunhofer.de>

--- a/doc/plugins/eu.esdihumboldt.hale.doc.user/html/views/functions.html
+++ b/doc/plugins/eu.esdihumboldt.hale.doc.user/html/views/functions.html
@@ -6,5 +6,42 @@
 </head>
 <body>
 	<h1>Functions view</h1>
+	<p>
+		The <i>Functions</i> view shows the available transformation
+		functions, which can be used to define relations between source and
+		target schema elements. They are listed according to their associated
+		function category.
+	</p>
+	<div>
+		<img src="images/functions_view.png">
+	</div>
+	<p>
+		Further information on a selected function will be displayed in the <a
+			href="../properties.html">Properties view</a>, e.g. the function
+		description or a graph depicting the inputs, outputs and parameters of
+		the function. The functions reference in this help also holds a
+		detailed description of the available functions.
+	</p>
+	<div>
+		<img src="images/functions_properties.png">
+	</div>
+
+	<!-- related concepts -->
+	<div>
+		<br> <img
+			src="PLUGINS_ROOT/eu.esdihumboldt.hale.doc.user/images/ngrelc.png">
+		<p>
+			<a href="../concepts/functions.html">Functions</a>
+		</p>
+	</div>
+
+	<!-- related tasks: create relation -->
+
+	<!-- related reference -->
+	<!-- div>
+		<br>
+		<img src="PLUGINS_ROOT/eu.esdihumboldt.hale.doc.user/images/ngrelr.png" >
+		XXX no hard links to function reference possible?!
+	</div-->
 </body>
 </html>
