added documentation on properties view
refs #385

Change-Id: Ib2562361d9617295f891d99a56180e35db4a027f

--- a/doc/plugins/eu.esdihumboldt.hale.doc.user/html/views/properties.html
+++ b/doc/plugins/eu.esdihumboldt.hale.doc.user/html/views/properties.html
@@ -6,5 +6,37 @@
 </head>
 <body>
 	<h1>Properties view</h1>
+	<p>
+		The properties view displays detailed information about the currently
+		selected object. Depending on the type of object, a different set of
+		properties is displayed. The object types for which this information
+		is available in <i>HALE</i> are the following:
+	</p>
+	<ul>
+		<li>Schema elements (e.g. selection from the <a
+			href="schema_explorer.html">Schema Explorer</a> or <a href="type_hierarchy.html">Type hierarchy view</a>)
+		</li>
+		<li>Mapping cells (e.g. as selected in the <a
+			href="alignment.html">Alignment view</a>)
+		</li>
+		<!--XXX not yet supported in properties <li>Instances</li> -->
+		<li>Functions (e.g. selection from the <a href="functions.html">Functions
+				view</a>)
+		</li>
+		<li>Reports (e.g. as selected in the <a href="report_list.html">Report
+				List</a>)
+		</li>
+	</ul>
+	<p>
+		The image below shows the <i>Properties view</i> displaying
+		information on a selected schema element:
+	</p>
+	<div>
+		<img src="images/schema_properties.png"
+			title="Schema element properties">
+	</div>
+	<p>Note that there are multiple named tabs on the left, each
+		representing a category of object properties. You can switch to a
+		category by clicking on the tab.</p>
 </body>
 </html>
