added first version of documentation on report list
refs #385

Change-Id: I3292a6642def6111792f4d8ff0d4e8b0eb59027b
Reviewed-on: http://gerrit.esdi-community.eu/968
Tested-by: Jenkins <sitemple@igd.fraunhofer.de>
Reviewed-by: Simon Templer <simon.templer@igd.fraunhofer.de>

--- a/doc/plugins/eu.esdihumboldt.hale.doc.user/html/views/report_list.html
+++ b/doc/plugins/eu.esdihumboldt.hale.doc.user/html/views/report_list.html
@@ -6,5 +6,17 @@
 </head>
 <body>
 	<h1>Report List</h1>
+	<p>
+		In the <i>Report List</i> the results of certain actions are
+		summarized. Loading a project, importing data or a schema, or the
+		execution of a transformation will all generate a report, stating if
+		the action completed successfully and if any errors or warnings
+		occurred.
+	</p>
+	<p>
+		To view more details on a report, select it in the <i>Report List</i>
+		and open the <a href="properties.html">Properties view</a>. There a
+		detailed list of all warnings and errors is available.
+	</p>
 </body>
 </html>
