added documentation on type hierarchy view
refs #385

Change-Id: I6e8bced059f2372e83ca99fdafa45f15faaeb34e
Reviewed-on: http://gerrit.esdi-community.eu/969
Tested-by: Jenkins <sitemple@igd.fraunhofer.de>
Reviewed-by: Simon Templer <simon.templer@igd.fraunhofer.de>

--- a/doc/plugins/eu.esdihumboldt.hale.doc.user/html/views/type_hierarchy.html
+++ b/doc/plugins/eu.esdihumboldt.hale.doc.user/html/views/type_hierarchy.html
@@ -6,5 +6,23 @@
 </head>
 <body>
 	<h1>Type hierarchy view</h1>
+	<p>
+		The <i>Type hierarchy view</i> allows to explore the type hierarchy of
+		a schema type. If you select a schema element in another view, e.g.
+		the <a href="schema_explorer.html">Schema Explorer</a>, the hierarchy
+		of the associated type, with its super types and sub types, is
+		displayed in the <i>Type hierarchy view</i>.
+	</p>
+	<div>
+		<img src="images/type_hierarchy.png" title="Type hierarchy view">
+	</div>
+	<p>
+		The type for which the hierarchy is displayed is marked with a violet
+		background. When the <i>Type hierarchy view</i> is active, you can
+		focus on another type in the hierarchy by double-clicking on it,
+		switching to this type's hierarchy.
+	</p>
+	<!-- related concepts: schema -->
+	<!-- related reference: schema elements -->
 </body>
 </html>
