added data view display mode icons to doc
refs #385

Change-Id: I34f1dc259eb427903b8a90161784cdd49c609b8a

--- a/doc/plugins/eu.esdihumboldt.hale.doc.user/html/views/data_common.xhtml
+++ b/doc/plugins/eu.esdihumboldt.hale.doc.user/html/views/data_common.xhtml
@@ -32,8 +32,9 @@
 		<h2>Display modes</h2>
 		<p>
 			To inspect the instances there are two display modes, <i>Compare</i>
-			and <i>Explore</i>. You can switch between both using the two
-			leftmost buttons in the view tool bar.
+			(<img src="images/compare.gif"></img>) and <i>Explore</i> (<img
+				src="images/explore.gif"></img>). You can switch between both using
+			the two leftmost buttons in the view tool bar.
 		</p>
 		<p>
 			<i>Compare</i> lets you compare instances of the same type with each
@@ -52,7 +53,7 @@
 			used to switch between the sample instances.
 		</p>
 		<div>
-			<img src="images/explore.png" title="Data view in Explore mode" ></img>
+			<img src="images/explore.png" title="Data view in Explore mode"></img>
 		</div>
 	</div>
 	<!-- related concepts: instances -->
