added cross references between topics
refs #385

Change-Id: I6d59b4dc4def13cbae7c077b93174ef87e4c05a1
Reviewed-on: http://gerrit.esdi-community.eu/1007
Tested-by: Jenkins <sitemple@igd.fraunhofer.de>
Reviewed-by: Simon Templer <simon.templer@igd.fraunhofer.de>

--- a/doc/plugins/eu.esdihumboldt.hale.doc.user/html/views/functions.html
+++ b/doc/plugins/eu.esdihumboldt.hale.doc.user/html/views/functions.html
@@ -26,16 +26,27 @@
 		<img src="images/functions_properties.png">
 	</div>
 
-	<!-- related concepts -->
+	<br>
+	<!-- related concepts: Functions -->
 	<div>
 		<br> <img
 			src="PLUGINS_ROOT/eu.esdihumboldt.hale.doc.user/images/ngrelc.png">
 		<p>
-			<a href="../concepts/functions.html">Functions</a>
+			<a href="PLUGINS_ROOT/eu.esdihumboldt.hale.doc.user/html/concepts/what_is_schema.html">What is a Schema?</a>
+		</p>
+		<p>
+			<a href="PLUGINS_ROOT/eu.esdihumboldt.hale.doc.user/html/concepts/functions.html">Functions</a>
 		</p>
 	</div>
 
 	<!-- related tasks: create relation -->
+	<div>
+		<br> <img
+			src="PLUGINS_ROOT/eu.esdihumboldt.hale.doc.user/images/ngrelt.png">
+		<p>
+			<a href="PLUGINS_ROOT/eu.esdihumboldt.hale.doc.user/html/tasks/alignment/mapping_schema_elem.html">Mapping schema elements</a>
+		</p>
+	</div>
 
 	<!-- related reference -->
 	<!-- div>
