--- a/doc/plugins/eu.esdihumboldt.hale.doc.user/html/views/schema_explorer.html
+++ b/doc/plugins/eu.esdihumboldt.hale.doc.user/html/views/schema_explorer.html
@@ -93,7 +93,41 @@
 		deep, to maintain an acceptable feedback time. If the schema contains
 		cycles, the search result may still go deeper than eight levels.</p>
 
+	<br>
 	<!-- related concepts: schema stuff, contexts! -->
-	<!-- related tasks: create relation, edit mappable types -->
+	<div>
+		<br> <img
+			src="PLUGINS_ROOT/eu.esdihumboldt.hale.doc.user/images/ngrelc.png">
+		<p>
+			<a href="PLUGINS_ROOT/eu.esdihumboldt.hale.doc.user/html/concepts/what_is_schema.html">What is a Schema?</a>
+		</p>
+		<p>
+			<a href="PLUGINS_ROOT/eu.esdihumboldt.hale.doc.user/html/concepts/contexts.html">Contexts</a>
+		</p>
+	</div>
+	
+	<!-- related tasks: Load a schema, create relation, edit mappable types -->
+	<div>
+		<br> <img
+			src="PLUGINS_ROOT/eu.esdihumboldt.hale.doc.user/images/ngrelt.png">
+		<p>
+			<a href="PLUGINS_ROOT/eu.esdihumboldt.hale.doc.user/html/tasks/schema/load_browse_schema.html">Loading and browsing schemas</a>
+		</p>
+		<p>
+			<a href="PLUGINS_ROOT/eu.esdihumboldt.hale.doc.user/html/tasks/schema/mapping_relevant.html">How to customize the mapping relevant types</a>
+		</p>
+		<p>
+			<a href="PLUGINS_ROOT/eu.esdihumboldt.hale.doc.user/html/tasks/alignment/mapping_schema_elem.html">Mapping schema elements</a>
+		</p>
+	</div>
+	
+	<!-- related reference: schema elements -->
+	<div>
+		<br> <img
+			src="PLUGINS_ROOT/eu.esdihumboldt.hale.doc.user/images/ngrelr.png">
+		<p>
+			<a href="PLUGINS_ROOT/eu.esdihumboldt.hale.doc.user/html/reference/schema_elements.html">Schema elements</a>
+		</p>
+	</div>
 </body>
 </html>
