--- a/doc/plugins/eu.esdihumboldt.hale.doc.user/html/views/source_data.xhtml
+++ b/doc/plugins/eu.esdihumboldt.hale.doc.user/html/views/source_data.xhtml
@@ -16,6 +16,24 @@
 		<img src="images/source_filter.png"></img>
 	</div>
 	<include path="eu.esdihumboldt.hale.doc.user/html/views/data_common.xhtml/modes"></include>
-	<!-- TODO: related tasks -->
+	
+	<br />
+	<!-- related concepts -->
+	<div>
+		<br /> <img
+			src="PLUGINS_ROOT/eu.esdihumboldt.hale.doc.user/images/ngrelc.png"></img>
+		<p>
+			<a href="PLUGINS_ROOT/eu.esdihumboldt.hale.doc.user/html/concepts/what_is_instance.html">What is an Instance?</a>
+		</p>
+	</div>
+	
+	<!-- related tasks: load instances -->
+	<div>
+		<br /> <img
+			src="PLUGINS_ROOT/eu.esdihumboldt.hale.doc.user/images/ngrelt.png"></img>
+		<p>
+			<a href="PLUGINS_ROOT/eu.esdihumboldt.hale.doc.user/html/tasks/data/working_source_data.html">Working with a source data set</a>
+		</p>
+	</div>
 </body>
 </html>
