--- a/doc/plugins/eu.esdihumboldt.hale.doc.user/html/views/transformed_data.xhtml
+++ b/doc/plugins/eu.esdihumboldt.hale.doc.user/html/views/transformed_data.xhtml
@@ -18,6 +18,24 @@
 		<img src="images/transformed_filter.png"></img>
 	</div>
 	<include path="eu.esdihumboldt.hale.doc.user/html/views/data_common.xhtml/modes"></include>
-	<!-- TODO: related tasks -->
+	
+	<br />
+	<!-- related concepts -->
+	<div>
+		<br /> <img
+			src="PLUGINS_ROOT/eu.esdihumboldt.hale.doc.user/images/ngrelc.png"></img>
+		<p>
+			<a href="PLUGINS_ROOT/eu.esdihumboldt.hale.doc.user/html/concepts/what_is_instance.html">What is an Instance?</a>
+		</p>
+	</div>
+	
+	<!-- related tasks: save transformed data -->
+	<div>
+		<br /> <img
+			src="PLUGINS_ROOT/eu.esdihumboldt.hale.doc.user/images/ngrelt.png"></img>
+		<p>
+			<a href="PLUGINS_ROOT/eu.esdihumboldt.hale.doc.user/html/tasks/data/save_transformation.html">Save the transformation result</a>
+		</p>
+	</div>
 </body>
 </html>
