--- a/doc/plugins/eu.esdihumboldt.hale.doc.user/html/views/type_hierarchy.html
+++ b/doc/plugins/eu.esdihumboldt.hale.doc.user/html/views/type_hierarchy.html
@@ -22,7 +22,24 @@
 		focus on another type in the hierarchy by double-clicking on it,
 		switching to this type's hierarchy.
 	</p>
+	
+	<br>
 	<!-- related concepts: schema -->
+	<div>
+		<br> <img
+			src="PLUGINS_ROOT/eu.esdihumboldt.hale.doc.user/images/ngrelc.png">
+		<p>
+			<a href="PLUGINS_ROOT/eu.esdihumboldt.hale.doc.user/html/concepts/what_is_schema.html">What is a Schema?</a>
+		</p>
+	</div>
+	
 	<!-- related reference: schema elements -->
+	<div>
+		<br> <img
+			src="PLUGINS_ROOT/eu.esdihumboldt.hale.doc.user/images/ngrelr.png">
+		<p>
+			<a href="PLUGINS_ROOT/eu.esdihumboldt.hale.doc.user/html/reference/schema_elements.html">Schema elements</a>
+		</p>
+	</div>
 </body>
 </html>
