--- a/doc/plugins/eu.esdihumboldt.hale.doc.user/html/views/alignment.html
+++ b/doc/plugins/eu.esdihumboldt.hale.doc.user/html/views/alignment.html
@@ -39,6 +39,30 @@
 	<div>
 		<img src="images/alignment_actions.png" title="Cell context menu">
 	</div>
+	
+	<br>
+	<!-- related concepts: alignment -->
+	<div>
+		<br> <img
+			src="PLUGINS_ROOT/eu.esdihumboldt.hale.doc.user/images/ngrelc.png">
+		<p>
+			<a href="PLUGINS_ROOT/eu.esdihumboldt.hale.doc.user/html/concepts/what_is_alignment.html">What is an Alignment?</a>
+		</p>
+	</div>
+	
 	<!-- related tasks: create relation, edit relation, remove relation -->
+	<div>
+		<br> <img
+			src="PLUGINS_ROOT/eu.esdihumboldt.hale.doc.user/images/ngrelt.png">
+		<p>
+			<a href="PLUGINS_ROOT/eu.esdihumboldt.hale.doc.user/html/tasks/alignment/mapping_schema_elem.html">Mapping schema elements</a>
+		</p>
+		<p>
+			<a href="PLUGINS_ROOT/eu.esdihumboldt.hale.doc.user/html/tasks/alignment/edit_cell.html">Editing a Mapping Cell</a>
+		</p>
+		<p>
+			<a href="PLUGINS_ROOT/eu.esdihumboldt.hale.doc.user/html/tasks/alignment/remove_cell.html">Deleting a relation</a>
+		</p>
+	</div>
 </body>
 </html>
