width constraint for html explanations in exported doc
Change-Id: I9faf4b17d59f06198aa4cee32b5b1bdf2828bdc5
Reviewed-on: http://gerrit.esdi-community.eu/1058
Tested-by: Jenkins <sitemple@igd.fraunhofer.de>
Reviewed-by: Simon Templer <simon.templer@igd.fraunhofer.de>

--- a/io/plugins/eu.esdihumboldt.hale.io.html/src/eu/esdihumboldt/hale/io/html/style.css
+++ b/io/plugins/eu.esdihumboldt.hale.io.html/src/eu/esdihumboldt/hale/io/html/style.css
@@ -18,8 +18,13 @@ body
 	border: 1px solid #eee;
 }
 
-.explanation {
+p.explanation {
 	white-space: pre-wrap;
+	margin-left: 0px;
+	max-width: 580px;
+}
+
+.explanation {
 	margin-left: 0px;
 	max-width: 580px;
 }
