example in welcome page to open a help topic
Change-Id: I10d6bad844794a7c780283900f3412fe6970da0f

--- a/ui/plugins/eu.esdihumboldt.hale.ui.firststeps/intro/css/sample.css
+++ b/ui/plugins/eu.esdihumboldt.hale.ui.firststeps/intro/css/sample.css
@@ -1,6 +1,6 @@
 
-a#euesdihumboldthaleuifirststeps-introLink img { background-image : url(graphics/sample.gif); }
-a#euesdihumboldthaleuifirststeps-introLink:hover img { background-image : url(graphics/sample_hov.gif); }
+a.header-link img { background-image : url(graphics/sample.gif); }
+a.header-link:hover img { background-image : url(graphics/sample_hov.gif); }
 
 div#awcgroup {
 	margin-top: 40px;
