generate mapping documentation for example projects
Mapping documentation is included as subtopic to each example
project in the user guide.

refs #414

Change-Id: Icb00e25c6dc326317f197d604290c3413a477060

--- a/io/plugins/eu.esdihumboldt.hale.io.html/src/eu/esdihumboldt/hale/io/html/style.css
+++ b/io/plugins/eu.esdihumboldt.hale.io.html/src/eu/esdihumboldt/hale/io/html/style.css
@@ -137,6 +137,11 @@ table {
 	border-collapse: collapse;
 }
 
+table.intro th {
+	vertical-align: top;
+	white-space: nowrap;
+}
+
 td,th { }
 
 th { font-weight: bold; text-align: right;}
