added help on Cardinality and Population
...to schema elements reference.

refs #465
refs #411

Change-Id: I643598ed192e7149a50677badca3fde6a1f1996b

--- a/doc/plugins/eu.esdihumboldt.hale.doc.user/html/views/schema_explorer.html
+++ b/doc/plugins/eu.esdihumboldt.hale.doc.user/html/views/schema_explorer.html
@@ -61,9 +61,11 @@
 	<p>
 		The icon displayed for a schema element represents its classification
 		and may be augmented with additional information, e.g. pointing out
-		that a property is mandatory. For a detailed listing please have a
-		look at the <a href="../reference/schema_elements.html">Schema
-			elements</a> reference.
+		that a property is mandatory. For a detailed listing and more detailed
+		information about how schema elements are represented in the
+		application, please have a look at the <a
+			href="../reference/schema_elements.html">Schema elements</a>
+		reference.
 	</p>
 	<p>In addition, the background color of a schema element indicates
 		its mapping status:</p>
