added help on new Compare mode
refs #465
refs #487

Change-Id: I8a9af6869b3d502fbf40f9cb981feb393ef4b068

--- a/doc/plugins/eu.esdihumboldt.hale.doc.user/html/views/data_common.xhtml
+++ b/doc/plugins/eu.esdihumboldt.hale.doc.user/html/views/data_common.xhtml
@@ -34,7 +34,11 @@
 			To inspect the instances there are two display modes, <i>Compare</i>
 			(<img src="images/compare.gif"></img>) and <i>Explore</i> (<img
 				src="images/explore.gif"></img>). You can switch between both using
-			the two leftmost buttons in the view tool bar.
+			the two leftmost buttons in the view tool bar.<br />For <i>Compare</i>
+			there is also a variant &quot;only populated&quot; (<img
+				src="images/compare2.gif"></img>) that only displays properties
+			populated in the loaded source data set or the live transformation
+			result.
 		</p>
 		<p>
 			<i>Compare</i> lets you compare instances of the same type with each
