first version of project management webapp
refs #503

Change-Id: Ia1eb134fc0bd889e264171bdd43767e7489a96ec
Reviewed-on: http://gerrit.esdi-community.eu/1588
Tested-by: Jenkins <sitemple@igd.fraunhofer.de>
Reviewed-by: Simon Templer <simon.templer@igd.fraunhofer.de>

--- a/server/plugins/eu.esdihumboldt.hale.server.webapp.branding.default/src/eu/esdihumboldt/hale/server/webapp/pages/BasePage.css
+++ b/server/plugins/eu.esdihumboldt.hale.server.webapp.branding.default/src/eu/esdihumboldt/hale/server/webapp/pages/BasePage.css
@@ -305,7 +305,7 @@ input.field-invalid {
 
 .field-msg, .field-msg-ERROR, .field-msg-WARNING, .field-msg-INFO, .field-msg-valid {
 	font-family:Arial, sans-serif;
- 	font-size: 0.9em;
+ 	font-size: 13px;
  	font-style: italic;
 }
 
@@ -350,16 +350,16 @@ fieldset {
 	width: 550px;
 	padding-left: 10px;
 	padding-right: 10px;
-	padding-bottom: 20px;
+	padding-bottom: 10px;
 	margin-bottom: 20px;
-	border: 1px dotted #7db3a7;
+	border: 1px solid #EBECF0;
 	display: block;
 	clear: both;
 }
 
 fieldset legend {
 	font-weight: bold;
-	color: #000000;
+	color: #0082BE;
 	background-color: #ffffff;
 }
 
