added custom error page
refs #448

Change-Id: I0c856165417866fa8170246ecb624b233aa053f0
Reviewed-on: http://gerrit.esdi-community.eu/1594
Tested-by: Jenkins <sitemple@igd.fraunhofer.de>
Reviewed-by: Simon Templer <simon.templer@igd.fraunhofer.de>

--- a/server/plugins/eu.esdihumboldt.hale.server.webapp.branding.default/src/eu/esdihumboldt/hale/server/webapp/pages/BasePage.css
+++ b/server/plugins/eu.esdihumboldt.hale.server.webapp.branding.default/src/eu/esdihumboldt/hale/server/webapp/pages/BasePage.css
@@ -241,6 +241,19 @@ h3 {
 	font-weight: bold;
 }
 
+h2.exception {
+	padding-left: 24px;
+}
+
+p.exception {
+	background-image: url("graphics/error.gif");
+	background-position: left center;
+	background-repeat: no-repeat;
+	color: #FF0000;
+	padding-left: 24px;
+	min-height: 16px;
+}
+
 .success {
 	color: #008800;
 	font-weight: bold;
