added transformations overview page
...for now with a dummy link

refs #505

Change-Id: I521fc91fee7525ba616b4f5e4fbee1e207d757d2
Reviewed-on: http://gerrit.esdi-community.eu/1599
Tested-by: Jenkins <sitemple@igd.fraunhofer.de>
Reviewed-by: Simon Templer <simon.templer@igd.fraunhofer.de>

--- a/server/plugins/eu.esdihumboldt.hale.server.webapp.branding.default/src/eu/esdihumboldt/hale/server/webapp/pages/BasePage.css
+++ b/server/plugins/eu.esdihumboldt.hale.server.webapp.branding.default/src/eu/esdihumboldt/hale/server/webapp/pages/BasePage.css
@@ -453,6 +453,10 @@ tbody tr.odd {
 	background-color: #f6f6f6;
 }
 
+tbody.odd tr {
+	background-color: #f6f6f6;
+}
+
 table input[type=text] {
 	width: 100%;
 }
