fixed wicket lists w/ no elements
Change-Id: I1757c24753bbc13fc24657790bd20275fbc597b6

--- a/server/plugins/eu.esdihumboldt.hale.server.projects.war/src/eu/esdihumboldt/hale/server/projects/war/components/ProjectList.html
+++ b/server/plugins/eu.esdihumboldt.hale.server.projects.war/src/eu/esdihumboldt/hale/server/projects/war/components/ProjectList.html
@@ -24,7 +24,7 @@
 			</tr>
 		</tbody>
 	</table>
-	<p wicket:id="noprojects">No projects available</p>
+	<p wicket:id="noprojects" style="font-style: italic;">No projects available</p>
 </wicket:panel>
 </body>
 </html>
