--- a/server/plugins/eu.esdihumboldt.hale.server.webtransform.war/src/eu/esdihumboldt/hale/server/webtransform/war/components/TransformationList.html
+++ b/server/plugins/eu.esdihumboldt.hale.server.webtransform.war/src/eu/esdihumboldt/hale/server/webtransform/war/components/TransformationList.html
@@ -27,7 +27,7 @@
 			<tr style="height: 12px;"><td></td><td></td></tr>
 		</tbody>
 	</table>
-	<p wicket:id="notransformations">No transformations available</p>
+	<p wicket:id="notransformations" style="font-style: italic;">No transformations available</p>
 </wicket:panel>
 </body>
 </html>
