--- a/server/plugins/eu.esdihumboldt.hale.server.projects.war/src/eu/esdihumboldt/hale/server/projects/war/components/ProjectList.html
+++ b/server/plugins/eu.esdihumboldt.hale.server.projects.war/src/eu/esdihumboldt/hale/server/projects/war/components/ProjectList.html
@@ -13,6 +13,7 @@
 				<td>Actions</td>
 				<td>Identifier</td>
 				<td>Name</td>
+				<td>Log</td>
 			</tr>
 		</thead>
 		<tbody>
@@ -21,6 +22,7 @@
 				<td style="text-align: center;"><a wicket:id="action"><img wicket:id="image" /></a></td>
 				<td wicket:id="identifier" style="font-family: monospace; vertical-align: middle">[Identifier]</td>
 				<td wicket:id="name" style="vertical-align: middle">[Name]</td>
+				<td style="text-align: center;"><a wicket:id="log"><img wicket:id="image" src="images/file.gif" title="Download log file" /></a></td>
 			</tr>
 		</tbody>
 	</table>
