--- a/server/plugins/eu.esdihumboldt.hale.server.webapp/src/eu/esdihumboldt/hale/server/webapp/components/JobPanel.html
+++ b/server/plugins/eu.esdihumboldt.hale.server.webapp/src/eu/esdihumboldt/hale/server/webapp/components/JobPanel.html
@@ -10,12 +10,15 @@
 		<tbody>
 			<wicket:container wicket:id="jobs">
 			<tr class="odd">
-				<td wicket:id="status">[Status]</td>
-				<td wicket:id="name" style="vertical-align: middle">[Name]</td>
+				<th colspan="2" wicket:id="name" style="vertical-align: middle">[Name]</th>
+			</tr>
+			<tr>
+				<td><progress wicket:id="progress"></progress></td>
+				<td wicket:id="task">[Task]</td>
 			</tr>
 			<tr>
 				<td></td>
-				<td><progress wicket:id="progress"></progress></td>
+				<td wicket:id="subtask" style="font-style: italic;">[Subtask]</td>
 			</tr>
 			</wicket:container>
 		</tbody>
@@ -24,4 +27,3 @@
 </wicket:panel>
 </body>
 </html>
-  
