--- a/server/plugins/eu.esdihumboldt.hale.server.webapp.branding.default/src/eu/esdihumboldt/hale/server/webapp/pages/BasePage.css
+++ b/server/plugins/eu.esdihumboldt.hale.server.webapp.branding.default/src/eu/esdihumboldt/hale/server/webapp/pages/BasePage.css
@@ -278,6 +278,45 @@ p.exception {
 	vertical-align: text-top;
 }
 
+/* Tabbed panel */
+div.tabpanel div.tab-row li {
+  margin: 0;
+  padding: 0;
+  display: inline;
+  list-style-type: none;
+}
+
+div.tabpanel div.tab-row a:link,
+ div.tabpanel div.tab-row a:visited {
+  float: left;
+  background: #f3f3f3;
+  font-size: 12px;
+  line-height: 14px;
+  font-weight: bold;
+  padding: 2px 10px 2px 10px;
+  margin-right: 4px;
+  border: 1px solid #ccc;
+  text-decoration: none;
+  color: #666;
+}
+
+div.tabpanel div.tab-row li.selected a:link,
+ div.tabpanel div.tab-row a:visited.active {
+  border-bottom: 1px solid #fff;
+  background: #fff;
+  color: #000;
+}
+
+div.tabpanel div.tab-row a:hover {
+  background: #fff;
+}
+
+div.tabpanel div.tab-panel {
+  border: 1px solid #ccc;
+  padding: 12px;
+  clear: both;
+}
+
 /* Special sections */
 
 .configuration {
